--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 # MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
+#db.driver=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
 # Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
-hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-#  create
-#  update
-#//мое дополнение
+#hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
 #hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
